--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'snow-kluster.github.io'
+baseURL = 'https://snow-kluster.github.io/'
 languageCode = 'en-us'
 title = "Snow Kluster's Blog"
 enableInlineShortcodes = true
